# ekursy-zero

./: API_ENDPOINTS.md  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: deploy.yml
src/: accesslogger.rs  errors.rs  main.rs  util.rs
src/parsers/: mercury.rs  merkury.rs  mod.rs  raw.rs
src/web/: errors.rs  mod.rs  route_course.rs  route_course_list.rs  route_dashboard.rs  route_index.rs  route_login.rs  route_resource.rs
src/web/routes/: course.rs  course_grades.rs  course_list.rs  forum.rs  login.rs  me.rs  mod.rs  proxy.rs  resource.rs
templates/: content.html  index-invalid.html  index.html
