[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-core = { version = "0.4.5" }
axum-macros = "0.4.2"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["cookies"] }
scraper = "0.21.0"
serde = { version = "1.0.215",  features = ["derive"] }
serde_json = "1.0.133"
tokio = { version="1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower-cookies = "0.10.0"
urlencoding = "2.1.3"

[dev-dependencies]
anyhow = "1"
